--- a/ast_bos_reliability.qsf
+++ b/ast_bos_reliability.qsf
@@ -153,5 +153,158 @@ set_location_assignment PIN_1 -to slv[2]
 set_location_assignment PIN_4 -to slv[1]
 set_location_assignment PIN_110 -to rst
 set_location_assignment PIN_111 -to stby
-set_global_assignment -name ENABLE_DEVICE_WIDE_RESET ON
+set_global_assignment -name ENABLE_DEVICE_WIDE_RESET OFF
+set_global_assignment -name ENABLE_SIGNALTAP ON
+set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
+set_global_assignment -name SIGNALTAP_FILE stp1.stp
+set_global_assignment -name SLD_NODE_CREATOR_ID 110 -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_ENTITY_NAME sld_signaltap -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_NODE_INFO=805334528" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_POWER_UP_TRIGGER=0" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_STORAGE_QUALIFIER_INVERSION_MASK_LENGTH=0" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ATTRIBUTE_MEM_MODE=OFF" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_STATE_FLOW_USE_GENERATED=0" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_STATE_BITS=11" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_BUFFER_FULL_STOP=1" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_CURRENT_RESOURCE_WIDTH=1" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_LEVEL=1" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_IN_ENABLED=0" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ADVANCED_TRIGGER_ENTITY=basic,1," -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_LEVEL_PIPELINE=1" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ENABLE_ADVANCED_TRIGGER=0" -section_id auto_signaltap_0
+set_location_assignment PIN_87 -to reset_button
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[0] -to clk -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[1] -to dac_value[0] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[2] -to dac_value[10] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[3] -to dac_value[11] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[4] -to dac_value[1] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[5] -to dac_value[2] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[6] -to dac_value[3] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[7] -to dac_value[4] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[8] -to dac_value[5] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[9] -to dac_value[6] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[10] -to dac_value[7] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[11] -to dac_value[8] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[12] -to dac_value[9] -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_SEGMENT_SIZE=8192" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_SAMPLE_DEPTH=8192" -section_id auto_signaltap_0
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk_in
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clpdm
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clpob
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to hd
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to n_ldac
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to n_reset
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to n_sync
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pblk
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to reset_button
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_green[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rm_red[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rst
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sck
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sckv[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sclk
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatai
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatao
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdatav[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sdi
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to shd
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to shp
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sl[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to slv[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to stby
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vd
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to altera_reserved_tck
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to altera_reserved_tdi
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to altera_reserved_tdo
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to altera_reserved_tms
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to my_init_done
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to my_sys_clk
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[13] -to n_ldac -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[14] -to n_reset -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[15] -to n_sync -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[16] -to sck -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[17] -to sclk -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[18] -to sdatai -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[19] -to sdatao -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[20] -to sdi -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[21] -to shd -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[22] -to shp -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[23] -to sl[10] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[24] -to sl[1] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[25] -to sl[2] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[26] -to sl[3] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[27] -to sl[4] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[28] -to sl[5] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[29] -to sl[6] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[30] -to sl[7] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[31] -to sl[8] -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[32] -to sl[9] -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_BITS=33" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_INVERSION_MASK=000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_INVERSION_MASK_LENGTH=126" -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_clk -to "pll_main:pll_main|c3" -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_data_in[0] -to n_ldac -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_data_in[1] -to n_reset -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_data_in[2] -to n_sync -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_data_in[3] -to sclk -section_id auto_signaltap_0
+set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_data_in[4] -to sdi -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_DATA_BITS=5" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_NODE_CRC_LOWORD=26332" -section_id auto_signaltap_0
+set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_NODE_CRC_HIWORD=24369" -section_id auto_signaltap_0
+set_global_assignment -name SLD_FILE "D:/Projects/Quartus 13/ast_bos_reliability/stp1_auto_stripped.stp"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
